--- a/src/main/resources/assets/among-us/lang/en_us.json
+++ b/src/main/resources/assets/among-us/lang/en_us.json
@@ -2,5 +2,6 @@
   "itemGroup.among-us.skeld_group": "Among Us - The Skeld",
 
   "block.among-us.skeld_cafeteria_tiles": "Skeld Cafeteria Tiles",
-  "block.among-us.skeld_cafeteria_table": "Skeld Cafeteria Table"
+  "block.among-us.skeld_cafeteria_table": "Skeld Cafeteria Table",
+  "block.among-us.emergency_meeting_button": "Emergency Meeting Button"
 }
