--- a/src/main/resources/assets/among-us/lang/en_us.json
+++ b/src/main/resources/assets/among-us/lang/en_us.json
@@ -3,5 +3,6 @@
 
   "block.among-us.skeld_cafeteria_tiles": "Skeld Cafeteria Tiles",
   "block.among-us.skeld_cafeteria_table": "Skeld Cafeteria Table",
-  "block.among-us.emergency_meeting_button": "Emergency Meeting Button"
+  "block.among-us.emergency_meeting_button": "Emergency Meeting Button",
+  "block.among-us.skeld_cafeteria_bench": "Skeld Cafeteria Bench"
 }
